equalIgnoringCase of two StringImpls doesn't handle 8 bit strings https://bugs.webkit.org/show_bug.cgi?id=96028

Reviewed by Benjamin Poulain.

Added 8 bit checks and paths to CaseFoldingHash::equal.  Also cleaned up StringHash::equal(), removing
obvious and in one case wrong comments.  Moved equalIgnoringCase(UChar*, UChar*) from StringImpl.cpp
to StringImpl.h.

* wtf/text/StringHash.h:
(WTF::StringHash::equal):
(WTF::CaseFoldingHash::equal):
* wtf/text/StringImpl.cpp:
* wtf/text/StringImpl.h:
(WTF::equalIgnoringCase):


Canonical link: https://commits.webkit.org/113988@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127887 268f45cc-cd09-0410-ab3c-d52691b4dbfc